terraform/modules/security-groups/main.tf
resource "aws_security_group" "rds_sg" {
  name        = "rds-security-group"
  description = "Allow access to RDS PostgreSQL DB"
  vpc_id      = var.vpc_id

  # Allow inbound traffic from within the VPC
  ingress {
    from_port   = 5432 # PostgreSQL default port
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = var.private_subnet_cidr_blocks
  }

  # Allow outbound traffic
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "DB Security Group"
  }
}

resource "aws_security_group" "elasticache_sg" {
  name        = "elasticache-security-group"
  description = "Allow access to Redis ElastiCache Cluster"
  vpc_id      = var.vpc_id

  # Allow inbound traffic from within the VPC
  ingress {
    from_port   = 6379 # Redis default port
    to_port     = 6379
    protocol    = "tcp"
    cidr_blocks = var.private_subnet_cidr_blocks
  }

  # Allow outbound traffic
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = var.private_subnet_cidr_blocks
  }

  tags = {
    Name = "Cache Security Group"
  }
}
